preps for first training by MiBo

--- a/health-v1-deployment-with-secret.yaml
+++ b/health-v1-deployment-with-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: health-v1
+  name: health-v1-with-secret
 spec:
   replicas: 3
   selector:
@@ -19,10 +19,10 @@ spec:
         version: v1
     spec:
       containers:
-        - image: health:v1
+        - image: gcr.io/fdc-test-statistic/health:2
           env:
             - name: SLEEP
-              value:  "2"
+              value:  "1"
             - name: SECRET
               valueFrom:
                 secretKeyRef:
@@ -38,11 +38,9 @@ spec:
             httpGet:
               path: /health
               port: 8000
-            initialDelaySeconds: 1 
+            initialDelaySeconds: 1
             periodSeconds: 1
             timeoutSeconds: 1
-
-
 
           livenessProbe:
             httpGet:
