--- a/health-bare-deployment.yaml
+++ b/health-bare-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         version: v1
     spec:
       containers:
-        - image: health:v1
+        - image: gcr.io/fdc-test-statistic/health:1
           env:
             - name: SLEEP
               value:  "2"
