--- a/limits.yaml
+++ b/limits.yaml
@@ -6,18 +6,19 @@ spec:
   limits:
     - type: Pod
       max:
-        cpu: 4
-        memory: 16G
+        cpu: 0.5
+        memory: 400M
       min:
         cpu: 0.1
         memory: 200M
-    - type: Container
-      default:
-        cpu: 0.1
-        memory: 200M
-      max:
-        cpu: 4
-        memory: 4G
-      min:
-        cpu: 0.1
-        memory: 200M
+
+#    - type: Container
+#      default:
+#        cpu: 0.1
+#        memory: 200M
+#      max:
+#        cpu: 4
+#        memory: 4G
+#      min:
+#        cpu: 0.1
+#        memory: 200M
