use public registry docker image

--- a/health-pod.yaml
+++ b/health-pod.yaml
@@ -8,7 +8,7 @@ metadata:
   name: health-v1
 spec:
       containers:
-        - image: gcr.io/fdc-test-statistic/health:1
+        - image: ragnaroek/health:2
           env:
             - name: SLEEP
               value:  "0"
