--- a/health-svc.yaml
+++ b/health-svc.yaml
@@ -6,10 +6,9 @@ metadata:
   name: health-v1
 spec:
   ports:
-    - nodePort: 30010
-      targetPort: 8000
+    - targetPort: 8000
       protocol: TCP
       port: 8000
   selector:
     app: health
-  type: NodePort
+  type: ClusterIP
