Fixed secret and deployment with secret

--- a/health-v1-deployment-with-secret.yaml
+++ b/health-v1-deployment-with-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: health-v1-with-secret
+  name: health-v1
 spec:
   replicas: 3
   selector:
@@ -19,7 +19,7 @@ spec:
         version: v1
     spec:
       containers:
-        - image: gcr.io/fdc-test-statistic/health:2
+        - image: ragnaroek/health:2
           env:
             - name: SLEEP
               value:  "1"
